kubernetes-legacy/apps/aether/default/podinfo/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: podinfo-route
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns-managed: "true"
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
      sectionName: wildcard-domain-https
  hostnames:
    - "podinfo.${domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        # - name: podinfo
        #   port: 80
        - group: multicluster.x-k8s.io
          kind: ServiceImport
          name: podinfo
          port: 80
